--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
     "react-slick": "^0.27.12",
+    "redux": "^4.0.5",
     "slick-carousel": "^1.8.1"
   },
   "scripts": {
