--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
+    "classnames": "^2.2.6",
     "node-sass": "^4.14.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
@@ -40,6 +41,9 @@
     ]
   },
   "devDependencies": {
-    "json-server": "^0.16.2"
+    "file-loader": "^6.1.1",
+    "json-server": "^0.16.2",
+    "react-app-rewired": "^2.1.6",
+    "url-loader": "^4.1.1"
   }
 }
